--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -83,8 +83,8 @@ sonar {
         property "sonar.plugins.downloadOnlyRequired", true
         property "sonar.projectBaseDir", ".."
         property "sonar.coverage.jacoco.xmlReportPaths", "backend/build/reports/jacoco/test/jacocoTestReport.xml"
-        property "sonar.javascript.lcov.reportPaths", "../frontend/coverage/lcov.info"
-        property "sonar.sources", "src/main/java, ../frontend/src"
-        property "sonar.tests", "src/test/java, ../frontend/test"
+        property "sonar.javascript.lcov.reportPaths", "frontend/coverage/lcov.info"
+        property "sonar.sources", "backend/src/main/java, frontend/src"
+        property "sonar.tests", "backend/src/test/java, frontend/test"
     }
 }
