--- a/.github/workflows/validate_code.yml
+++ b/.github/workflows/validate_code.yml
@@ -127,6 +127,10 @@ jobs:
     permissions:
       contents: read
 
+    steps:
+      - name: Success
+        shell: bash
+        run: echo "All checks succeeded"
 
   # -----------------------------------------------------------------
   # Run Sonar
