run sonar on frontend code (#398)
* run sonar on frontend code

* adjust basedir

* adjust basdir

* make some changes in frontend to see if analysis works

* refactor validate action

* fix invalid working dir

* run tests with coverage

* dont run tests again in sonar step

* set sonar base dir

* fix paths

* try / for sonar dir

* set sonar bas dir with parameter

* exclude ymls

* remove files duplicated for sonar test

* skip recompile in sonar job

* remove unused images

* add validate job to combine result

* add step

* add skip compile flag

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -82,5 +82,8 @@ sonar {
         property "sonar.java.coveragePlugin", "jacoco"
         property "sonar.plugins.downloadOnlyRequired", true
         property "sonar.coverage.jacoco.xmlReportPaths", "backend/build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.javascript.lcov.reportPaths", "frontend/coverage/lcov.info"
+        property "sonar.sources", "backend/src/main/java, frontend/src"
+        property "sonar.tests", "backend/src/test/java, frontend/test"
     }
 }
