--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-vue": "^10.6.2",
         "happy-dom": "^20.0.11",
+        "msw": "^2.12.4",
         "postcss": "^8.5.6",
         "prettier": "^3.7.3",
         "prettier-plugin-tailwindcss": "^0.7.2",
