--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
         "lint": "npx eslint --fix src",
         "format": "./node_modules/.bin/prettier . --ignore-path .gitignore --ignore-path .prettierignore --write",
         "test": "TZ=CET vitest -r test",
-        "test:coverage": "TZ=CET vitest run --coverage",
+        "test:coverage": "TZ=CET vitest run --coverage -r test",
         "check:format": "./node_modules/.bin/prettier --ignore-path .gitignore --ignore-path .prettierignore --check .",
         "check:lint": "npx eslint src",
         "check:typescript": "vue-tsc"
