--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -11,6 +11,9 @@
         "^vue$",
         "^vue-router$",
         "^vue-i18n$",
+        "^vitest$",
+        "^@vue/",
+        "msw",
         "<THIRD_PARTY_MODULES>",
         "^@/lib/(.*)$",
         "^@/shared/(.*)$",
