--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-vue": "^10.6.2",
+        "fake-indexeddb": "^6.2.5",
         "happy-dom": "^20.0.11",
         "msw": "^2.12.7",
         "postcss": "^8.5.6",
