add assistant automation instructions and CI integration for ArchUnit rules to receive fast-fail for architecture violations

--- a/.github/workflows/validate_code.yml
+++ b/.github/workflows/validate_code.yml
@@ -103,6 +103,11 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
 
+      - name: Run ArchUnit rules
+        shell: bash
+        working-directory: backend
+        run: ./gradlew test --tests org.eventplanner.architecture.ArchUnitRulesTest
+
       - name: Run tests
         shell: bash
         working-directory: backend
